Add document list pagination parameters
